# roaring-benchmarks

./: Cargo.toml  README.md
aws/: setup_aws_instance.sh
benches/: contains.rs  lemire_roaring_paper_benchmarks.rs  multi_union.rs
src/: dataset.rs  lib.rs
src/dataset/: expected_results.rs  parse.rs  statistics.rs
tests/: croaring_test.rs  dataset_test.rs  roaring_rs_test.rs  roaring_test.rs
