[package]
name = "roaring-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
criterion = { version = "0.5", features = ["html_reports"] }
croaring = "2"
roaring = "0.10"
tracing = "0.1"
zip = "2"

[[bench]]
name = "lemire_roaring_paper_benchmarks"
harness = false

[package.metadata.cargo-udeps.ignore]
normal = ["criterion"]

